# python_web_ex7

./: .env.example  pyproject.toml
ex_7/: alembic.ini  connect_db.py  definitions.py  models.py  my_select.py  seed.py
ex_7/alembic/: env.py
ex_7/alembic/versions/: 8ae54a81c76b_init.py
